@@ -22,6 +22,7 @@ brackets and parens.
 +Add Bookmark manager window to Shelf
 +Support storing/loading user configuration from XDG standard location on Linux.
 +Persist find settings between sessions.
++Improvements to the Style Editor (ability to remove style sheets)
 
 LIBRARY:
 +Support ControlBars in on left and right side of ControlBox.
